Test listner and testNG code added

--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
 browser=chrome
-#browser=firefox
-#browser=edge
+fbrowser=firefox
+ebrowser=edge
 
 orangeHrmUrl=https://opensource-demo.orangehrmlive.com
 orangeUserName=Admin
