Origin branch merged with main

--- a/config.properties
+++ b/config.properties
@@ -23,10 +23,12 @@ reportCriterion=Employee Name
 includeCriterion=Current Employees Only
 fieldGroup=Personal
 empId=Employee Id
-empFirstName=Employee First Name
-empLastName=Employee Last Name
+empFirstName=ABC
+empLastName=XYZ
 clientBanner=D:\\clientBanner.png
 clientLogo=D:\\clientLogo.jpg
 loginBanner=D:\\loginBanner.png
 jobTitles=Job Titles
 job=Transport Head
+Skills=Skills
+skillName=Automation Tester
